methods.picture.PatternPicture.scala.error
Compilation error:
PatternPicture:7: error: not found: value selectBrushColor
    selectBrushColor(c);
    ^PatternPicture:20: error: not found: value selectBrushColor
  selectBrushColor(c)
  ^PatternPicture:36: error: not found: value color
  diagG(color.YELLOW)
        ^